Fix immutable list when create search